--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -29,7 +29,7 @@ jobs:
           devops-integration-token: ${{ secrets.SN_DEVOPS_INTEGRATION_TOKEN }}
 
           # Tool ID of GitHub integration (sys_id)
-          tool-id: ${{ secrets.SN_DEVOPS_TOOL_ID }}
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
 
           # GitHub context
           context-github: ${{ toJSON(github) }}
