--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -59,6 +59,7 @@ jobs:
       - name: Copy man page
         run: cp docs/witr.1 ./witr.1
 
+      # 🚦 ServiceNow Change – waits for approval
       - name: ServiceNow DevOps Change
         uses: ServiceNow/servicenow-devops-change@v6.1.0
         with:
@@ -98,3 +99,4 @@ jobs:
             witr.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
