--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -36,25 +36,21 @@ jobs:
           context-github: ${{ toJSON(github) }}
 
           # Pipeline job name
-          job-name: "Build and Deploy"
+          job-name: Build and Deploy
 
-          # Change request payload (MUST be valid JSON)
-          change-request: |
-            {
-              "changeCreationTimeOut": 3600,
-              "changeStepTimeOut": 1800,
-              "pollingInterval": 30,
-              "changeRequestDetails": {
-                "attributes": {
-                  "short_description": "Test description",
-                  "justification": "test justification",
-                  "description": "test description",
-                  "comments": "Change created via GitHub Actions",
-                  "work_notes": "Test work notes"
-                },
-                "setCloseCode": false
-              }
-            }
+          # Change request payload (YAML, NOT JSON)
+          change-request:
+            changeCreationTimeOut: 3600
+            changeStepTimeOut: 1800
+            pollingInterval: 30
+            changeRequestDetails:
+              attributes:
+                short_description: Test description
+                justification: test justification
+                description: test description
+                comments: Change created via GitHub Actions
+                work_notes: Test work notes
+              setCloseCode: false
 
       - name: Print Change Number
         run: |
