--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - id: servicenow-change
-        name: Create and monitor ServiceNow Change
+      - name: Create and monitor ServiceNow Change
+        id: servicenow-change
         uses: ServiceNow/servicenow-devops-change@v6.1.0
         with:
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
@@ -26,18 +26,22 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: Build and Deploy
-          change-request:
-            changeCreationTimeOut: 3600
-            changeStepTimeOut: 1800
-            pollingInterval: 30
-            changeRequestDetails:
-              attributes:
-                short_description: Test description
-                justification: test justification
-                description: test description
-                comments: Change created via GitHub Actions
-                work_notes: Test work notes
-              setCloseCode: false
+          change-request: |
+            {
+              "changeCreationTimeOut": 3600,
+              "changeStepTimeOut": 1800,
+              "pollingInterval": 30,
+              "changeRequestDetails": {
+                "attributes": {
+                  "short_description": "Test description",
+                  "justification": "test justification",
+                  "description": "test description",
+                  "comments": "Change created via GitHub Actions",
+                  "work_notes": "Test work notes"
+                },
+                "setCloseCode": false
+              }
+            }
 
       - name: Print Change Number
         run: echo "ServiceNow Change Number: ${{ steps.servicenow-change.outputs.change-request-number }}"
