--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -4,11 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
 
 jobs:
   servicenow-change:
@@ -17,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Create and monitor ServiceNow Change
+      - name: Create ServiceNow Change
         id: servicenow-change
         uses: ServiceNow/servicenow-devops-change@v6.1.0
         with:
@@ -26,22 +21,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: Build and Deploy
-          change-request: |
-            {
-              "changeCreationTimeOut": 3600,
-              "changeStepTimeOut": 1800,
-              "pollingInterval": 30,
-              "changeRequestDetails": {
-                "attributes": {
-                  "short_description": "Test description",
-                  "justification": "test justification",
-                  "description": "test description",
-                  "comments": "Change created via GitHub Actions",
-                  "work_notes": "Test work notes"
-                },
-                "setCloseCode": false
-              }
-            }
+          change-request: |-
+            {"changeCreationTimeOut":3600,"changeStepTimeOut":1800,"pollingInterval":30,"changeRequestDetails":{"attributes":{"short_description":"Test description","justification":"test justification","description":"test description","comments":"Change created via GitHub Actions","work_notes":"Test work notes"},"setCloseCode":false}}
 
-      - name: Print Change Number
-        run: echo "ServiceNow Change Number: ${{ steps.servicenow-change.outputs.change-request-number }}"
+      - run: echo "Change Number = ${{ steps.servicenow-change.outputs.change-request-number }}"
