--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -6,9 +6,14 @@ on:
       - main
 
 jobs:
+  build:
+     name : build
+     runs-on: ubuntu-latest
+  
   servicenow-change:
     name : create ServiceNow Change
     runs-on: ubuntu-latest
+    needs : build
 
     steps:
       - uses: actions/checkout@v3
