--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -27,7 +27,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: Build and Deploy
-          change-request: |-
-            {"changeCreationTimeOut":3600,"changeStepTimeOut":1800,"pollingInterval":30,"changeRequestDetails":{"attributes":{"short_description":"Test descriptiont","type":"DevOps Simplified","justification":"test justification","description":"test description","comments":"Change created via GitHub Actions","work_notes":"Test work notes"},"setCloseCode":false}}
+          change-request:
+            '{"changeCreationTimeOut":3600,"changeStepTimeOut":1800,"pollingInterval":30,"changeRequestDetails":{"attributes":{"short_description":"Test descriptiont","type":"DevOps Simplified","justification":"test justification","description":"test description","comments":"Change created via GitHub Actions","work_notes":"Test work notes"},"setCloseCode":false}}'
 
       - run: echo "Change Number = ${{ steps.servicenow-change.outputs.change-request-number }}"
