--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -20,6 +20,6 @@ jobs:
           context-github: ${{ toJSON(github) }}
           job-name: Create ServiceNow Change
           change-request:
-            '{"changeCreationTimeOut":3600,"changeStepTimeOut":1800,"pollingInterval":30,"changeRequestDetails":{"attributes":{"short_description":"Test descriptiont","type":"DevOps Simplified","justification":"test justification","description":"test description","comments":"Change created via GitHub Actions","work_notes":"Test work notes"},"setCloseCode":false}}'
+            '{"changeCreationTimeOut":3600,"changeStepTimeOut":1800,"pollingInterval":30,"changeRequestDetails":{"attributes":{"short_description":"Test descriptiont","type":"DevOps Simplified","justification":"test justification","description":"test description", "start_date": "2025-09-04 13:10:00","end_date": "2025-09-04 13:20:00"},"setCloseCode":false, "chg_model":{"name": "DevOps"}}}'
 
       - run: echo "Change Number = ${{ steps.servicenow-change.outputs.change-request-number }}"
