--- a/.github/workflows/servicenow-devops-change.yml
+++ b/.github/workflows/servicenow-devops-change.yml
@@ -6,13 +6,22 @@ on:
       - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+     - name : SNow Build
+       run: echo "Build complete"
+
   servicenow-change:
     name : create ServiceNow Change
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: change
         uses: ServiceNow/servicenow-devops-change@v2.0.0
+
         with:
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
           devops-integration-token: ${{ secrets.SN_DEVOPS_INTEGRATION_TOKEN }}
